Updating env sample

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,5 @@ DB_HOST=""
 ACCESS_TOKEN_SECRET=""
 REFRESH_TOKEN_SECRET=""
 COOKIE_SECRET=""
+LOCAL_URL=http://localhost:3000
+PUBLIC_URL=https://slimmoms.netlify.app
