--- a/.env.sample
+++ b/.env.sample
@@ -4,5 +4,7 @@ DB_HOST=""
 ACCESS_TOKEN_SECRET=""
 REFRESH_TOKEN_SECRET=""
 COOKIE_SECRET=""
+COOKIE_NAME=""
+COOKIE_TIME=10
 LOCAL_URL=http://localhost:3000
 PUBLIC_URL=https://slimmoms.netlify.app
