adding refresh, access time to env

--- a/.env.sample
+++ b/.env.sample
@@ -6,5 +6,7 @@ REFRESH_TOKEN_SECRET=""
 COOKIE_SECRET=""
 COOKIE_NAME=""
 COOKIE_TIME=10
+REFRESH_TIME=30d
+ACCESS_TIME=30m
 LOCAL_URL=http://localhost:3000
 PUBLIC_URL=https://slimmoms.netlify.app
